test/pos/poly1.msmt_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions
(declare-fun offset (Int) @a0)


; Qualifiers


; Well-formedness Constraints


; Horn Constraints
(constraint (forall ((x (BitVec Size32))(v1 (BitVec Size32))) (=> (and (= VV (apply offset 0)) (= v1 x)) (= v1 x))))
